# blancos

./: Cargo.toml  README.md
.cargo/: config.toml
src/: allocator.rs  cpu.rs  gdt.rs  interrupts.rs  lib.rs  libbackend.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
src/libbackend/: error_handlers.rs  exit.rs  init.rs  task.rs  test.rs
src/process/: context.rs  mod.rs  scheduler.rs  switch.rs
src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
