[package]
name = "blancos"
version = "0.1.0"
edition = "2018"

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.9.8"
x86_64 = "0.14.2"

[dependencies.lazy_static]
version = "1.0.1"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
test-success-exit-code = 33
