[package]
name = "blancos"
version = "0.1.0"
edition = "2018"

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }
volatile = "0.2.6"
spin = "0.9.8"
x86_64 = "0.14.2"       # for QEMU exit
uart_16550 = "0.2.0"    # serial port (to print to console)
pic8259 = "0.10.1"      # for interrupt handling
pc-keyboard = "0.7.0"   # for keyboard input

[dependencies.lazy_static]
version = "1.0.1"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false
